# liblgp

./: AAliblgp_functs.hpp  CMakeLists.txt  Liblgp_functs.hpp  README.md  RI.cpp  RI.hpp  main.cpp  pgl_functs.hpp  tinyxml2.cpp  tinyxml2.hpp
dev/: main.cpp
